kubernetes-dashboard/overlays/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "cluster-issuer-selfsigned" 
    cert-manager.io/issuer-kind: "ClusterIssuer"
    metallb.uniberse.tf/address-pool: default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: kubernetes-dashboard
      port:
        name: kubernetes-dashboard
  tls:
    - hosts:
        - kubernetes-dashboard.k3s
      secretName: kubernetes-dashboard.k3s.cloud-tls
  rules:
  - host: kubernetes-dashboard.k3s
    http:
      paths:
      - path: /.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              name: kubernetes-dashboard
